--- a/app/templates/src/_index.html
+++ b/app/templates/src/_index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Hello, <%= projectName %>!</h1>
 
-  <script src="6to5/browser-polyfill.js"></script>
+  <script src="babel/browser-polyfill.js"></script>
 
   <script src="scripts/script.js"></script>
 </body>
